core/include/idtx_core/idtx_core.h

// ---------------------------------------------------------------------
// Opaque handle types.
// Every public function takes/returns these as pointers; the underlying
// layout is private to libidtx_core and may change without breaking ABI.
// ---------------------------------------------------------------------

typedef struct idtx_skeleton         idtx_skeleton_t;
typedef struct idtx_mesh             idtx_mesh_t;
typedef struct idtx_material         idtx_material_t;
typedef struct idtx_avatar           idtx_avatar_t;
IDTX_CORE_API const char* idtx_material_get_normal_texture(const idtx_material_t* mat);
// MToon overlay — calling any of these marks the material as MToon.
IDTX_CORE_API void idtx_material_set_mtoon_shade_color(idtx_material_t* mat, float r, float g, float b);
IDTX_CORE_API void idtx_material_set_mtoon_rim_color  (idtx_material_t* mat, float r, float g, float b);
IDTX_CORE_API void idtx_material_set_mtoon_outline_width(idtx_material_t* mat, float width);
IDTX_CORE_API int32_t idtx_material_is_mtoon(const idtx_material_t* mat);
IDTX_CORE_API void idtx_material_get_mtoon_shade_color(const idtx_material_t* mat, float out_rgb[3]);
IDTX_CORE_API void idtx_material_get_mtoon_rim_color  (const idtx_material_t* mat, float out_rgb[3]);
IDTX_CORE_API float idtx_material_get_mtoon_outline_width(const idtx_material_t* mat);
// ---------------------------------------------------------------------
// idtx_avatar — the top-level container.
//
// Ownership: the avatar OWNS its handles. Adding a handle transfers
// ownership; destroying the avatar frees all attached handles. Pass
// NULL to add_* to detach a slot.
//
// Mesh-to-material binding is by index — material_index[i] is the
// material attached to mesh[i] (or -1 for none).
// Mesh-to-skeleton binding is implicit (single skeleton per avatar
// in this MVP; multi-skeleton support can land if/when needed).
// ---------------------------------------------------------------------

IDTX_CORE_API idtx_avatar_t* idtx_avatar_create(void);
IDTX_CORE_API void           idtx_avatar_destroy(idtx_avatar_t* avatar);
IDTX_CORE_API void        idtx_avatar_set_name(idtx_avatar_t* avatar, const char* name);
IDTX_CORE_API const char* idtx_avatar_get_name(const idtx_avatar_t* avatar);
// Root transform: avatar's pose relative to its containing world.
IDTX_CORE_API void idtx_avatar_set_root_transform(idtx_avatar_t* avatar, const float matrix[16]);
IDTX_CORE_API void idtx_avatar_get_root_transform(const idtx_avatar_t* avatar, float out_matrix[16]);
// Skeleton — at most one. Replacing destroys the previous skeleton.
IDTX_CORE_API void idtx_avatar_set_skeleton(idtx_avatar_t* avatar, idtx_skeleton_t* skel);
IDTX_CORE_API idtx_skeleton_t* idtx_avatar_get_skeleton(const idtx_avatar_t* avatar);
// Mesh list. Returns the index assigned. material_index pairs the mesh
// with the avatar's material slot at that index (or -1).
IDTX_CORE_API int32_t idtx_avatar_add_mesh(idtx_avatar_t* avatar, idtx_mesh_t* mesh, int32_t material_index);
IDTX_CORE_API int32_t idtx_avatar_get_mesh_count(const idtx_avatar_t* avatar);
IDTX_CORE_API idtx_mesh_t* idtx_avatar_get_mesh(const idtx_avatar_t* avatar, int32_t index);
IDTX_CORE_API int32_t idtx_avatar_get_mesh_material(const idtx_avatar_t* avatar, int32_t mesh_index);
// Material list.
IDTX_CORE_API int32_t idtx_avatar_add_material(idtx_avatar_t* avatar, idtx_material_t* mat);
IDTX_CORE_API int32_t idtx_avatar_get_material_count(const idtx_avatar_t* avatar);
IDTX_CORE_API idtx_material_t* idtx_avatar_get_material(const idtx_avatar_t* avatar, int32_t index);
// ---------------------------------------------------------------------
// Top-level I/O entry points.
//
// Returns 0 on success, non-zero on failure. Error categories:
//   1 = invalid argument (NULL avatar / NULL path)
//   2 = USD stage creation failed (e.g. unwritable path)
//   3 = USD write failed (Save() returned false)
// ---------------------------------------------------------------------

IDTX_CORE_API int32_t idtx_core_export_avatar_to_usd(
    const idtx_avatar_t* avatar,
    const char* path);
// Open a USD stage at `path` and rebuild an idtx_avatar_t* from its
// default prim (or the first prim if no default is set). Returns NULL
// on failure (NULL path, open failed, no usable root prim). Caller
// owns the returned handle and frees with idtx_avatar_destroy.
IDTX_CORE_API idtx_avatar_t* idtx_core_import_avatar_from_usd(
    const char* path);
// VRM 1.0 export — writes a .vrm (glTF binary container) with the
// VRMC_vrm extension. MToon materials get VRMC_materials_mtoon; if a
// skeleton is present, its bone names are looked up against the
// humanoid-bones bridge map for the VRMC_vrm.humanoid.humanBones table.
//
// Error codes match the USD path:
//   0 = success
//   1 = invalid argument
//   2 = file open failed
//   3 = write failed
//   99 = not yet implemented for the requested feature combination
IDTX_CORE_API int32_t idtx_core_export_avatar_to_vrm(
    const idtx_avatar_t* avatar,
    const char* path);
// VRM 1.0 import — parses a .vrm at `path` and rebuilds an
// idtx_avatar_t* from it (inverse of the export).
IDTX_CORE_API idtx_avatar_t* idtx_core_import_avatar_from_vrm(
    const char* path);