flow/adapters/unity/IdtxCore/Plugins/IdtxCoreNative.cs


        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr idtx_material_get_normal_texture(MaterialHandle mat);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void idtx_material_set_mtoon_shade_color(MaterialHandle mat, float r, float g, float b);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void idtx_material_set_mtoon_rim_color(MaterialHandle mat, float r, float g, float b);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void idtx_material_set_mtoon_outline_width(MaterialHandle mat, float width);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int idtx_material_is_mtoon(MaterialHandle mat);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void idtx_material_get_mtoon_shade_color(MaterialHandle mat, [Out] float[] outRgb);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void idtx_material_get_mtoon_rim_color(MaterialHandle mat, [Out] float[] outRgb);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern float idtx_material_get_mtoon_outline_width(MaterialHandle mat);

        // Avatar
        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern AvatarHandle idtx_avatar_create();

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void idtx_avatar_destroy(AvatarHandle avatar);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void idtx_avatar_set_name(AvatarHandle avatar, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr idtx_avatar_get_name(AvatarHandle avatar);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void idtx_avatar_set_root_transform(AvatarHandle avatar, [In] float[] matrix);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void idtx_avatar_get_root_transform(AvatarHandle avatar, [Out] float[] outMatrix);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern void idtx_avatar_set_skeleton(AvatarHandle avatar, SkeletonHandle skel);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern SkeletonHandle idtx_avatar_get_skeleton(AvatarHandle avatar);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int idtx_avatar_add_mesh(AvatarHandle avatar, MeshHandle mesh, int materialIndex);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int idtx_avatar_get_mesh_count(AvatarHandle avatar);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern MeshHandle idtx_avatar_get_mesh(AvatarHandle avatar, int index);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int idtx_avatar_get_mesh_material(AvatarHandle avatar, int meshIndex);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int idtx_avatar_add_material(AvatarHandle avatar, MaterialHandle mat);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int idtx_avatar_get_material_count(AvatarHandle avatar);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern MaterialHandle idtx_avatar_get_material(AvatarHandle avatar, int index);

        // Top-level I/O
        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int idtx_core_export_avatar_to_usd(
            AvatarHandle avatar, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern AvatarHandle idtx_core_import_avatar_from_usd(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string path);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern int idtx_core_export_avatar_to_vrm(
            AvatarHandle avatar, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);

        [DllImport(Lib.DllName, CallingConvention = CallingConvention.Cdecl)]
        public static extern AvatarHandle idtx_core_import_avatar_from_vrm(
            [MarshalAs(UnmanagedType.LPUTF8Str)] string path);

        // Helper for the IntPtr-returning string accessors.
        public static string PtrToUtf8(IntPtr ptr)
        {
            if (ptr == IntPtr.Zero) return string.Empty;
            return Marshal.PtrToStringUTF8(ptr);
        }
    }
}
